<resources>
    <string name="app_name">Age In Minutes Calculator</string>

    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>

    <string name="select_date">Select date</string>

    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age in minutes</string>
</resources>